objects/inov8__PMT_Error_Log__c.object
<CustomObject>
    <description>Used to capture errors occurred operations.</description>
    <fields>
        <fullName>inov8__Apex_Class__c</fullName>
        <description>Apex class whose execution failed</description>
        <label>Apex Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__Error_Message__c</fullName>
        <description>Actual error caused function execution</description>
        <label>Error Message</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__Method_Name__c</fullName>
        <description>Apex method which get failed</description>
        <label>Method Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__Salesforce_Record_Id__c</fullName>
        <description>Salesforce record Id for which error occurred</description>
        <label>Salesforce Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>PMT Error Log</label>
    <nameField>
        <displayFormat>ER-{000000}</displayFormat>
        <label>PMT Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PMT Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>